objects/Underwriting__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Account.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_or_Declined_Time__c</fullName>
        <description>Intermediate Field For Approval Or Declined Date</description>
        <formula>CASE(MOD( Underwriting_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Approved_or_Declined_Date__c - Underwriting_Check_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Approved_or_Declined_Date__c - Underwriting_Check_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Approved_or_Declined_Date__c - Underwriting_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Approved_or_Declined_Date__c - Underwriting_Check_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Approved_or_Declined_Date__c - Underwriting_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Approved_or_Declined_Date__c - Underwriting_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Approved_or_Declined_Date__c - Underwriting_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Approved_or_Declined_Date__c - Underwriting_Check_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval or Declined Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_SME_Queue_time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <formula>IF( 
ISBLANK(In_Progress_Date_Completed__c),Now() - Not_Started_Date_Completed__c, 
(In_Progress_Date_Completed__c - Not_Started_Date_Completed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME Queue time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_UW__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned to UW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandfathered_List__c</fullName>
        <label>Grandfathered List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Account.HQ_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Number__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Underwriting</relationshipLabel>
        <relationshipName>Underwriting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Pending_Correction_Record_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is True If Pending Correction Record Present, Else False.</description>
        <label>Is Pending Correction Record Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Underwriting_Details_Applicable__c</fullName>
        <label>Is Underwriting Details Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_UW_Approved__c</fullName>
        <label>Medical UW Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Started_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not_Started_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Not Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Underwriting_Date__c</fullName>
        <description>Original Underwriting Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriting Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF( ISBLANK(Owner:User.Id), Owner:Queue.Name, Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName )</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Underwriting&apos;,LoggedinProfile__c ==&apos;Underwriting Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_Underwriting__c == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Pending Correction from WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Not_Started__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Time__c</fullName>
        <description>Intermediate Pending Correction Date field</description>
        <formula>CASE(MOD( Underwriting_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_Date__c -  Underwriting_Check_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_Date__c -  Underwriting_Check_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_Date__c -  Underwriting_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_Date__c -  Underwriting_Check_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_Date__c -  Underwriting_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_Date__c -  Underwriting_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_Date__c -  Underwriting_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Pending_Correction_Date__c -  Underwriting_Check_Date__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pooled_Non_Pooled__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Account.Pooled_Non_Pooled__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pooled/Non-Pooled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Situs_State__c )</formula>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01A Assign To UW</fullName>
                </value>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Docs_Saved__c</fullName>
        <label>Support Docs Saved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Support_Underwriting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support Underwriting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Underwriting Pending Correction Time</description>
        <inlineHelpText>This Is How Long It Took The SME Department To Approve/Deny A SME Record</inlineHelpText>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Underwriting Pending Correction Time</description>
        <inlineHelpText>This Is How Long It Took A SME Department To Submit A Pending Correction</inlineHelpText>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum Of Time To Pend And Time To Approve/Deny</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,

CASE(MOD( Original_Underwriting_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Underwriting_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Underwriting_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Underwriting_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Underwriting_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Underwriting_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Underwriting_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Underwriting_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c -  Original_Underwriting_Date__c)/7)*5)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Time SME Record Was In The SME Department And The Sales Support/Implementations Department</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_Type__c</fullName>
        <label>Underwriter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Life &amp; Disability</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Check_Date__c</fullName>
        <description>Captures Date When The Underwriting Check Field Is True</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures Date When The Underwriting Check Field Is True</inlineHelpText>
        <label>Underwriting Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Underwriting_Support_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriting Support Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Underwriting_Support_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriting Support Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Underwriting_Type_Formula__c</fullName>
        <formula>IF( 
TEXT(Underwriter_Type__c) == &apos;Dental&apos;, 
&apos;Dental UW&apos;, 
IF( 
TEXT(Underwriter_Type__c) == &apos;Medical&apos;, 
&apos;Underwriter&apos;, 
IF( 
TEXT(Underwriter_Type__c) == &apos;Vision&apos;, &apos;Vision UW&apos;, 
IF( 
TEXT(Underwriter_Type__c) == &apos;Life &amp; Disability&apos;, &apos;L&amp;D UW&apos;, &apos;None&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underwriting Type Formula</label>
        <type>Text</type>
    </fields>
    <label>Underwriting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Underwriter_Type__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Underwriting_Medical_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Underwriter_Type__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Underwriter_Type__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <label>All Underwriting Medical - Key Account</label>
    </listViews>
    <listViews>
        <fullName>All_Underwriting_Specialty_Key_Account</fullName>
        <booleanFilter>(1 OR  2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Underwriter_Type__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Underwriter_Type__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </filters>
        <filters>
            <field>Underwriter_Type__c</field>
            <operation>equals</operation>
            <value>Life &amp; Disability</value>
        </filters>
        <filters>
            <field>Underwriter_Type__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </filters>
        <label>All Underwriting Specialty - Key Account</label>
    </listViews>
    <listViews>
        <fullName>Life_Disability_UW_Assigned</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Time_To_Approve_Deny__c</columns>
        <columns>Underwriter_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Number__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Underwriter_Type__c</field>
            <operation>equals</operation>
            <value>Life &amp; Disability</value>
        </filters>
        <filters>
            <field>Owner__c</field>
            <operation>notEqual</operation>
            <value>Underwriting - Local</value>
        </filters>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group,National Accounts</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started,01A Assign To UW,02 Work In Progress,03 Pending Correction</value>
        </filters>
        <label>Life &amp; Disability UW - Assigned</label>
    </listViews>
    <listViews>
        <fullName>Life_Disability_UW_Completed</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Time_To_Approve_Deny__c</columns>
        <columns>Underwriter_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Number__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Underwriter_Type__c</field>
            <operation>equals</operation>
            <value>Life &amp; Disability</value>
        </filters>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group,National Accounts</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>Life &amp; Disability UW – Completed</label>
    </listViews>
    <listViews>
        <fullName>Life_Disability_UW_Unassigned</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Time_To_Approve_Deny__c</columns>
        <columns>Underwriter_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Number__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Underwriter_Type__c</field>
            <operation>equals</operation>
            <value>Life &amp; Disability</value>
        </filters>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group,National Accounts</value>
        </filters>
        <filters>
            <field>Owner__c</field>
            <operation>equals</operation>
            <value>Underwriting - Local</value>
        </filters>
        <label>Life &amp; Disability UW - Unassigned</label>
    </listViews>
    <listViews>
        <fullName>Local_CA_NP_Med_Change_Req_Off_Cycle</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Underwriter_Type__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Owner__c</columns>
        <columns>Date_Assigned_to_UW__c</columns>
        <columns>Time_To_Approve_Deny__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>notEqual</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <filters>
            <field>Is_Underwriting_Details_Applicable__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Implementation_Type__c</field>
            <operation>equals</operation>
            <value>Change request Off Cycle</value>
        </filters>
        <filters>
            <field>Pooled_Non_Pooled__c</field>
            <operation>equals</operation>
            <value>Non-pooled</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>California</value>
        </filters>
        <label>Local CA NP Change Req Off Cycle</label>
        <language>en_US</language>
    </listViews>
</CustomObject>